force-app/main/default/objects/Report_Schedule__c/Report_Schedule__c.object-meta.xml
<CustomObject>
    <label>Report Schedule</label>
    <nameField>
        <label>Scheduled Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report_Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>