force-app/main/default/objects/Report_Schedule__c/fields/Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Email_Addresses__c</fullName>
    <label>Email Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>