force-app/main/default/objects/Report_Schedule__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>