force-app/main/default/objects/Report_Schedule__c/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <label>File Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>csv</fullName>
            </value>
            <value>
                <fullName>xls</fullName>
            </value>
            <value>
                <fullName>xlsx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>