force-app/main/default/objects/Report_Schedule__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>