force-app/main/default/objects/Report_Schedule__c/fields/Schedule_Day__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Day__c</fullName>
    <label>Schedule Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>